# salina-bi

./: .gitignore  Estructura del repositorio (completa)  README.md  pyproject.toml  requirements.txt
config/: etl_schema.json  settings.example.yaml
data/processed/: README.md  cumplimiento_senasa.parquet  kpi_diario.parquet  produccion.parquet
data/raw/: example_logistica.csv  example_plc_log.csv  example_produccion.csv
data/reference/: calidades.csv  clientes.csv  piletas.csv  turnos.csv
deploy/: backup_to_usb.sh  docker-compose.yml  update_offline.bat
docs/: SECURITY.md  data_dictionary.md  kpi_manual.md  salina_model.md
notebooks/: 01_data_profiling.ipynb  02_kpi_definition.ipynb  03_forecast_model.ipynb
scripts/: generate_sample_processed.py
src/salinabi/: __init__.py
src/salinabi/cli/: main.py
src/salinabi/core/: ingestion.py  metrics.py  transformation.py
src/salinabi/domain/: energy.py  logistics.py  production.py
src/salinabi/services/: compliance.py  forecasting.py
src/salinabi/visualization/: dashboard.py  reports.py
tests/: conftest.py
tests/integration/: test_compliance.py  test_etl_pipeline.py
tests/unit/: test_ingestion.py  test_metrics.py  test_production_domain.py
