[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salina-bi"
version = "1.2.0"
description = "Business Intelligence para salinas pampeanas: producción, energía, logística y cumplimiento"
authors = [
    {name = "Comunidad Salinera Pampeana", email = "contacto@salinabi.ar"},
    {name = "Hernán Lang", email = "hlang@produccion.lapampa.gob.ar"}
]
license = {text = "MIT Industrial Cooperative"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities"
]

dependencies = [
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "weasyprint>=61.0",
    "pymodbus>=3.4.0",
    "scikit-learn>=1.3.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0"
]
airflow = [
    "apache-airflow==2.8.4"
]

[project.urls]
Homepage = "https://github.com/tu-usuario/salina-bi"
Documentation = "https://github.com/tu-usuario/salina-bi/blob/main/README.md"
Repository = "https://github.com/tu-usuario/salina-bi.git"
Issues = "https://github.com/tu-usuario/salina-bi/issues"

[project.scripts]
salina-bi = "salinabi.cli.main:cli"
salina-bi-update = "salinabi.cli.main:update_daily"
salina-bi-report = "salinabi.cli.main:generate_report"

[tool.setuptools.packages.find]
where = ["src"]
include = ["salinabi*"]

[tool.setuptools.package-data]
salinabi = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
