[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salina-bi"
version = "1.2.0"
description = "Business Intelligence para salinas pampeanas: producción, energía, logística y cumplimiento"
authors = [
    {name = "Comunidad Salinera Pampeana", email = "contacto@salinabi.ar"},
    {name = "Hernán Lang", email = "hlang@produccion.lapampa.gob.ar"}
]
license = {text = "MIT Industrial Cooperative"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities"
]

dependencies = [
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "weasyprint>=61.0",
    "pymodbus>=3.4.0",
    "scikit-learn>=1.3.0",
    "click>=8.1.0",
    "jsonschema>=4.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.4"
]
airflow = [
    "apache-airflow==2.8.4"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0"
]

[project.urls]
Homepage = "https://github.com/tu-usuario/salina-bi"
Documentation = "https://github.com/tu-usuario/salina-bi/blob/main/README.md"
Repository = "https://github.com/tu-usuario/salina-bi.git"
Issues = "https://github.com/tu-usuario/salina-bi/issues"
Changelog = "https://github.com/tu-usuario/salina-bi/blob/main/CHANGELOG.md"

[project.scripts]
salina-bi = "salinabi.cli.main:cli"
salina-bi-update = "salinabi.cli.main:update_daily"
salina-bi-report = "salinabi.cli.main:generate_report"
salina-bi-dashboard = "salinabi.visualization.dashboard:launch_dashboard"

[tool.setuptools.packages.find]
where = ["src"]
include = ["salinabi*"]

[tool.setuptools.package-data]
salinabi = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["salinabi"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=salinabi",
    "--cov-report=term-missing",
    "--cov-report=html"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (skip by default)"
]

[tool.coverage.run]
source = ["salinabi"]
omit = ["*/tests/*", "*/__init__.py", "src/salinabi/cli/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload"
]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
